--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": ""
   },
   "author": "Christopher Lloyd",
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.3",
     "express-graphql": "^0.4.0",
-    "graphql": "^0.4.9"
+    "graphql": "^0.4.9",
+    "request": "^2.65.0"
   },
   "devDependencies": {
     "eslint": "^1.7.3"
