--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "nodemon -x babel-node index.js"
+    "start": "nodemon -x babel-node index.js"
   },
   "author": "Christopher Lloyd",
   "license": "ISC",
